Courses/202403/Deployment_Exercise/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: hellopod
  template:
    metadata:
      labels:
        app: hellopod
    spec:
      containers:
      - image: mcr.microsoft.com/azuredocs/aks-helloworld2:v1
        name: hellocontainer
