Courses/202403/Deployment_Exercise/elasticsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastic-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: elasticpod
  template:
    metadata:
      labels:
        app: elasticpod
    spec:
      containers:
      - image: elasticsearch:7.17.18
        name: elasticcontainer
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
---

apiVersion: v1
kind: Service
metadata:
  name: elastic-service
spec:
  type: ClusterIP
  selector:
    app: elasticpod
  ports:
    - port: 9200
      targetPort: 9200
