Courses/202403/Deployment_Exercise/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: ClusterIP
  selector:
    app: hellopod
  ports:
    - port: 80
      targetPort: 80
